--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 before_install:
   - sudo apt-get -qq update
 install:
-  - sudo apt-get -qq install rake bison git gperf libgit2-dev
+  - sudo apt-get -qq install rake bison git gperf cmake libgit2-dev
 before_script:
   - cd ../
   - git clone https://github.com/mruby/mruby.git
